<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Coinnect</string>
    <string name="web_client_id">637249420251-i8t14jh5sd3v49pukfp24l04c4c7j82j.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="coinnect">Coinnect</string>
    <string name="group_expenses_simplified">Group expenses, simplified.</string>
    <string name="create_an_account">Create an account</string>
    <string name="hello">Hello</string>
    <string name="money_spent">$2500</string>
    <string name="date">June, 25</string>
    <string name="settings">Settings</string>
    <string name="friends">Friends</string>
    <string name="transactions">Transactions</string>
    <string name="home">Home</string>
    <string name="today_transactions">Today\'s Transactions</string>
    <string name="pending_transactions">Pending Transactions</string>
    <string name="register">Register</string>
    <string name="_0_10000">$0 - $10000</string>
    <string name="set_monthly_budget">Set Monthly Budget</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="username">Username</string>
    <string name="monthly_budget">Monthly budget</string>
    <string name="sign_in_with_username">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="friends_list">Friends list</string>
    <string name="user_s_avatar">user\'s avatar</string>
    <string name="friend_username">Username</string>
    <string name="add_friend_title">Add friend</string>
    <string name="friend_s_username">Username</string>
    <string name="search_users">Search username</string>
    <string name="change_monthly_budget">Change Monthly Budget</string>
    <string name="change_password">Change Password</string>
</resources>