<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >
    <item
        android:id="@+id/homeActivity"
        android:icon="@drawable/baseline_home_24"
        android:iconTint="@color/black"
        android:title="@string/home" />
    <item
        android:id="@+id/transactionActivity"
        android:icon="@drawable/transaction"
        android:iconTint="@color/black"
        android:title="@string/transactions" />
    <item
        android:id="@+id/friends"
        android:icon="@drawable/friends_24"
        android:iconTint="@color/black"

        android:title="@string/friends" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/baseline_settings_24"
        android:iconTint="@color/black"
        android:title="@string/settings" />

</menu>