<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.login.LoginActivity"
    >

  <TextView
      android:id="@+id/titleWelcome"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/coinnect"
      android:textAlignment="center"
      android:textSize="48sp"
      android:textStyle="bold" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="24sp"
      android:layout_marginBottom="16sp"
      android:text="@string/group_expenses_simplified"
      android:textAlignment="center"

    />

<Button
      android:id="@+id/signInUsernameButton"
      android:backgroundTint="@color/black"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawableLeft="@drawable/baseline_key_24"
      android:layout_gravity="center"
      android:layout_marginTop="8dp"
      android:layout_marginHorizontal="16dp"
      android:text="@string/sign_in_with_username"
      android:textColor="@color/white"
      android:textSize="20sp"
      tools:ignore="RtlHardcoded" />
  <Button
      android:id="@+id/registerButton"
      android:backgroundTint="@color/black"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawableLeft="@drawable/outline_person_add_24"
      android:layout_gravity="center"
      android:layout_marginHorizontal="16dp"
      android:layout_marginTop="8dp"
      android:text="@string/create_an_account"
      android:textColor="@color/white"
      android:textSize="20sp"
      tools:ignore="RtlHardcoded" />


</LinearLayout>